k8s/prod/location-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: location-service-route
  namespace: prod
spec:
  parentRefs:
  - name: medicojob-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /location
    backendRefs:
    - name: location-service
      port: 5005
  - matches:
    - path:
        type: PathPrefix
        value: /nearby
    backendRefs:
    - name: location-service
      port: 5005
